--- a/templates/unitcoordinator_dashboard.html
+++ b/templates/unitcoordinator_dashboard.html
@@ -328,8 +328,10 @@
             </div>
 
             <!-- Weekly Schedule Grid -->
-            <div class="schedule-grid" id="schedule-grid">
-              <!-- Days will be populated by JavaScript -->
+            <div class="schedule-grid-container">
+              <div class="schedule-grid" id="schedule-grid">
+                <!-- Days will be populated by JavaScript -->
+              </div>
             </div>
           </section>
 
