--- a/templates/unitcoordinator_dashboard.html
+++ b/templates/unitcoordinator_dashboard.html
@@ -1671,8 +1671,7 @@ Tutorial A,Tuesday,09:00,1-12,120,EZONE 1.24
 
   // Profile dropdown functionality
   function openProfilePage() {
-    alert('Profile page coming soon!');
-    // window.location.href = '/unitcoordinator/profile';
+    window.location.href = '/unitcoordinator/profile';
   }
   
   function openAccountSettings() {
