added a account settings page

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -101,7 +101,7 @@
                   <span class="material-icons text-gray-400 mr-3">person</span>
                   View Profile
                 </a>
-                <a href="#" onclick="openAccountSettings()" 
+                <a href="{{ url_for('unitcoordinator.account_settings') }}" 
                    class="flex items-center px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">
                   <span class="material-icons text-gray-400 mr-3">settings</span>
                   Account Settings
